# uac-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  setup.cfg
src/uac_generator/: uac_generator.py  uac_store.py
tests/: test_uac_generator.py  test_uac_store.py
